# isbn

./: .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: pipeline.yml
isbnchile/: .env.example  merge.py  run.py  scrapy.cfg
isbnchile/isbnchile/: items.py  middlewares.py  pipelines.py  settings.py
isbnchile/isbnchile/spiders/: books.py
