[project]
name = "isbn"
version = "0.1.0"
description = "ISBN library"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "click>=8.1.7",
    "pandas==2.2.2",
    "python-dotenv==1.0.1",
    "scrapy==2.11.2",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
